# netspeed-monitor

./: .gitignore  COMMAND.md  DEBUG.md  README.md  build.gradle.kts  device.ini.example  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts  setup.js
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  netspeed_calculator.cpp  netspeed_calculator.h  netspeed_jni.cpp
app/src/main/java/com/netspeed/monitor/: AppUsageTracker.java  BootReceiver.java  DataUsageReport.java  MainActivity.java  MainActivity.kt  NetSpeedApp.java  NetSpeedApp.kt  SettingsActivity.java  SpeedGaugeView.java  SpeedIconGenerator.java  SpeedMonitorService.java  SpeedUtils.java  SpeedWidgetProvider.java  (+1 more)
app/src/main/res/drawable/: bg_button_start.xml  bg_button_stop.xml  bg_card.xml  bg_filter_active.xml  bg_filter_inactive.xml  bg_status_monitoring.xml  bg_status_stopped.xml  bg_tab_bar.xml  bg_warning.xml  bg_widget.xml  bg_widget_section.xml  ic_back.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_settings.xml  ic_speed_notification.xml  ic_stop.xml  ic_tab_apps.xml  ic_tab_report.xml  ic_tab_speed.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  content_app_usage.xml  content_data_report.xml  widget_speed.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: speed_widget_info.xml
(+25 files in other folders)
